--- a/Covariate Shift.ipynb
+++ b/Covariate Shift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "f276cf02",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b71bf1c8",
    "metadata": {},
    "outputs": [],
@@ -42,65 +42,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "8a429fec",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate(n, p, s, t, u, Alpha = 0):\n",
-    "    Z_sample[i], Z_target[i] = np.zeros((n, p)), np.zeros((n, p))\n",
+    "    Z_source, Z_target = np.zeros((n, p)), np.zeros((n, p))\n",
+    "    V_source, V_target = 0, 0\n",
     "    for i in range(n):\n",
-    "        Z_sample[i] = np.random.normal(0, 1, p)\n",
+    "        Z_source[i] = np.random.normal(0, 1, p)\n",
     "        Z_target[i] = np.random.normal(0.1, 1, p)\n",
     "        \n",
-    "    X_sample = Z @ u + np.random.normal(0, 1, n)\n",
-    "    X_target = Z @ u + np.random.normal(0, 1, n)\n",
+    "    X_source = Z_source @ u + np.random.normal(0, 1, n)\n",
+    "    X_target = Z_target @ u + np.random.normal(0, 1, n)\n",
     "    \n",
-    "    V_sample = Z @ s + np.random.normal(0, 1, n) + X\n",
-    "    V_target = Z @ t + np.random.normal(0, 1, n) - X\n",
+    "    V_source = Z_source @ s + X_source + np.random.normal(0, 1, n)\n",
+    "    V_target = Z_target @ t - X_target + np.random.normal(0, 1, n)\n",
     "    \n",
-    "    Y = np.zeros(n)\n",
+    "    Y_source, Y_target = np.zeros(n), np.zeros(n)\n",
     "    for i in range(n):\n",
-    "        Y_sample[i] = Z_sample[i] @ Z_sample[i] + Z_sample[i].sum() + X_sample[i] + V_sample + np.random.normal(0, 1, 1)\n",
-    "        Y_target[i] = Z_target[i] @ Z_target[i] + Z_target[i].sum() + X_target[i] + V_target + np.random.normal(0, 1, 1)\n",
-    "    return Y, X_sample, X_target, V_sample, V_target, Z"
+    "        Y_source[i] = np.sin(Z_source[i].sum() + X_source[i] + V_source[i]) + np.random.normal(0, 1, 1) + Alpha * X_source[i]\n",
+    "        Y_target[i] = np.sin(Z_target[i].sum() + X_target[i] + V_target[i]) + np.random.normal(0, 1, 1) + Alpha * X_target[i]\n",
+    "    return Y_source, X_source, V_source, Z_source, Y_target, X_target, V_target, Z_target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "0083f3ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y, X_sample, X_target, Z = generate(s, t, 0)"
+    "Y_source, X_source, V_source, Z_source, Y_target, X_target, V_target, Z_target = generate(n, p, s, t, u, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "9040e78e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8846445338158873"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg = LassoCV().fit(Z_source,Y_source)\n",
+    "Y_source[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fc6c7681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_source.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "45050627",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.c_[Z,X_sample]\n",
-    "reg = LassoCV().fit(a,Y)\n",
-    "\n",
     "def Covariate_Shift_Weight(x, z, v = 0):\n",
     "    return np.exp(((x - z @ s)**2 - (x - z @ t)**2)/2)\n",
     "\n",
-    "def Model_X(z, v = 0):\n",
-    "    return z @ t + np.random.normal(0, 1, 1)\n",
+    "def Model_X(z, v):\n",
+    "    return z @ u + np.random.normal(0, 1, 1)\n",
     "\n",
     "def T_statistic(y, x, z, v = 0):\n",
-    "    b = np.append(Z[0],X_sample[0])\n",
-    "    c = reg.predict(b.reshape(1,21))\n",
-    "    return (y - 1.5*x - z @ z) ** 2"
+    "    d_y = reg.predict(z.reshape(1,20))\n",
+    "    d_x = z @ u\n",
+    "    return np.abs((y-d_y)*(x-d_x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
+   "id": "2e1867f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00151025])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T_statistic(Y_source[1], X_source[1], Z_source[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d156a854",
    "metadata": {},
    "outputs": [
@@ -108,36 +170,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6706944384034188\n",
-      "1.7496329547856648\n",
-      "0.9858853290795901\n",
-      "1.0081388816838919\n",
-      "1.092654554498052\n",
-      "0.894500168911984\n",
-      "0.5633644789535892\n",
-      "0.7849766073724715\n",
-      "0.6026440809542113\n",
-      "0.8681296028230419\n"
+      "[0.62883561]\n",
+      "[1.00151025]\n",
+      "[4.64956768]\n",
+      "[2.11225433]\n",
+      "[1.38612382]\n",
+      "[1.46191983]\n",
+      "[1.03372469]\n",
+      "[0.08014713]\n",
+      "[3.10903179]\n",
+      "[1.37132904]\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
-    "    x=X_sample[i]\n",
-    "    z=Z[i]\n",
-    "    print(Covariate_Shift_Weight(x, z))"
+    "    x=X_source[i]\n",
+    "    z=Z_source[i]\n",
+    "    t=T_statistic(Y_source[i], X_source[i], Z_source[i])\n",
+    "    print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4ee27feb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Conterfeits(y, x, z, v = 0, L = 5, K = 10):\n",
     "    M = L * K - 1\n",
-    "    cnt = 0\n",
+    "    cnt = 0 \n",
     "    \n",
     "    for i in range(M):\n",
     "        x_ = Model_X(z, v)\n",
@@ -162,51 +225,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "c8fd609a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 88.6912104 , 111.64327617, 114.99401231,  89.91094202,\n",
-       "         89.4021802 ]),\n",
-       " 7.023778827144947)"
+       "(array([125.,  92.,  94.,  88., 101.]), 8.700000000000001)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PCRtest(Y, X_sample, Z, L = 5, K = 20, covariate_shift = True)"
+    "PCRtest(Y_target, X_target, Z_target, L = 5, K = 20, covariate_shift = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "93bf7bac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 99., 109., 105.,  87., 100.]), 2.7600000000000002)"
+       "(array([ 95., 113.,  89., 100., 103.]), 3.24)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PCRtest(Y, X_target, Z, L = 5, K = 20, covariate_shift = False)"
+    "PCRtest(Y_source, X_source, Z_source, L = 5, K = 20, covariate_shift = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "id": "4d9e0667",
    "metadata": {},
    "outputs": [],
@@ -215,18 +276,22 @@
     "    if x >= 80: return 79\n",
     "    return int(x)\n",
     "\n",
-    "def Mutiple_Tests(n, s, t, Alpha):\n",
+    "def Mutiple_Tests(m, Alpha):\n",
     "    X = []\n",
-    "    for i in trange(n):\n",
-    "        Y, X_sample, X_target, Z = generate(s, t, Alpha)\n",
-    "        u, v = PCRtest(Y, X_sample, Z, L = 5, K = 20, covariate_shift = True)\n",
+    "    n, p=500, 20\n",
+    "    for i in trange(m):\n",
+    "        s = np.random.normal(0, 1, p)\n",
+    "        t = s + np.random.normal(0, 0.1, p)\n",
+    "        u = np.random.normal(0, 1, p)\n",
+    "        Y_source, X_source, V_source, Z_source, Y_target, X_target, V_target, Z_target = generate(n, p, s, t, u, Alpha)\n",
+    "        u, v = PCRtest(Y_source, X_source, Z_source, L = 5, K = 20, covariate_shift = False)\n",
     "        X.append(v)\n",
     "    return X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "id": "d3a47289",
    "metadata": {},
    "outputs": [
@@ -234,19 +299,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [11:26<00:00,  6.86s/it]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [11:27<00:00,  6.87s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:59<00:00,  5.92s/it]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:59<00:00,  5.93s/it]\n"
      ]
     }
    ],
    "source": [
-    "H_0 = Mutiple_Tests(100, s, t, 1)\n",
-    "H_1 = Mutiple_Tests(100, s, t, 0)"
+    "H_0 = Mutiple_Tests(10, 1)\n",
+    "H_1 = Mutiple_Tests(10, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "id": "1a6732a6",
    "metadata": {},
    "outputs": [],
@@ -257,116 +322,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 94,
    "id": "b348e528",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.948400469401161,\n",
-       " 2.4299937478718165,\n",
-       " 3.6434562977166247,\n",
-       " 4.192055619339859,\n",
-       " 4.361423853852116,\n",
-       " 4.814655410600205,\n",
-       " 5.145560994303507,\n",
-       " 5.222000395658265,\n",
-       " 5.476832275572569,\n",
-       " 5.505930989379524,\n",
-       " 7.0620107426429675,\n",
-       " 7.444367408318267,\n",
-       " 8.27021471609173,\n",
-       " 8.608313958006407,\n",
-       " 8.756883913548155,\n",
-       " 8.944933412748505,\n",
-       " 9.097236905228986,\n",
-       " 9.433770724795512,\n",
-       " 9.617372847626033,\n",
-       " 9.79271628775856,\n",
-       " 9.859879983039056,\n",
-       " 10.044168220093953,\n",
-       " 10.202166567383404,\n",
-       " 10.292358237785825,\n",
-       " 10.32457997616735,\n",
-       " 10.336217151392265,\n",
-       " 10.989299130225348,\n",
-       " 11.087379669699786,\n",
-       " 11.768842089186142,\n",
-       " 11.782698961150928,\n",
-       " 11.847374900962862,\n",
-       " 11.98667639833087,\n",
-       " 12.115183048170502,\n",
-       " 12.230560158327991,\n",
-       " 12.305185474654946,\n",
-       " 12.36829839684255,\n",
-       " 12.373638675943058,\n",
-       " 12.386005507473712,\n",
-       " 12.69996047013001,\n",
-       " 12.763876774775976,\n",
-       " 12.8307545885898,\n",
-       " 13.227255981724301,\n",
-       " 13.26694112800803,\n",
-       " 13.384423006898544,\n",
-       " 13.479112326937997,\n",
-       " 13.73255689907025,\n",
-       " 13.992335774503681,\n",
-       " 14.002229716368825,\n",
-       " 14.804101972605004,\n",
-       " 15.250562488527416,\n",
-       " 15.791807513555577,\n",
-       " 15.792093342400209,\n",
-       " 15.809186195054139,\n",
-       " 15.86279143399092,\n",
-       " 15.985250587594622,\n",
-       " 16.230380891370146,\n",
-       " 16.86339983893756,\n",
-       " 16.874090274657796,\n",
-       " 17.139661378385853,\n",
-       " 17.158928250294508,\n",
-       " 17.39508848625783,\n",
-       " 17.46741481770317,\n",
-       " 17.924712271675066,\n",
-       " 17.936477903210072,\n",
-       " 18.13185047319263,\n",
-       " 18.18445139694392,\n",
-       " 18.228250559533457,\n",
-       " 18.473136713365513,\n",
-       " 18.48126421676308,\n",
-       " 18.62028713272199,\n",
-       " 18.668348879899582,\n",
-       " 18.9730539841943,\n",
-       " 19.13624287067537,\n",
-       " 19.174784879380454,\n",
-       " 19.280581945805817,\n",
-       " 19.454927698384953,\n",
-       " 19.491712529280377,\n",
-       " 19.699412881103594,\n",
-       " 19.83022876124792,\n",
-       " 19.907262962176112,\n",
-       " 20.569017466623727,\n",
-       " 20.9136072705952,\n",
-       " 20.963543846594252,\n",
-       " 21.80349574514983,\n",
-       " 22.074782915644224,\n",
-       " 22.314686071766765,\n",
-       " 22.849209742697546,\n",
-       " 23.783285579417274,\n",
-       " 24.514236113339933,\n",
-       " 25.32600980192593,\n",
-       " 25.896218167149343,\n",
-       " 26.474230990893677,\n",
-       " 26.758893026101347,\n",
-       " 27.045838156755355,\n",
-       " 29.29891838302887,\n",
-       " 31.659327723524513,\n",
-       " 34.376179619411836,\n",
-       " 39.27094926639763,\n",
-       " 40.07710543274192,\n",
-       " 40.46114444143142]"
+       "[1187.14,\n",
+       " 1188.6200000000001,\n",
+       " 1243.34,\n",
+       " 1281.16,\n",
+       " 1304.5,\n",
+       " 1321.94,\n",
+       " 1329.54,\n",
+       " 1386.7,\n",
+       " 1412.06,\n",
+       " 1446.14]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,8 +390,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7e17cf81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=[]\n",
+    "for i in range(50):\n",
+    "    b=PCRtest(Y_source, X_source, Z_source, L = 5, K = 20, covariate_shift = False)\n",
+    "    a.append(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f652e7c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([107., 117.,  85., 100.,  91.]), 6.44),\n",
+       " (array([108.,  97., 101., 108.,  86.]), 3.34),\n",
+       " (array([103., 115.,  93.,  98.,  91.]), 3.68),\n",
+       " (array([112.,  98.,  96., 103.,  91.]), 2.54),\n",
+       " (array([107., 108.,  86., 116.,  83.]), 8.540000000000001),\n",
+       " (array([105., 108., 100., 103.,  84.]), 3.54),\n",
+       " (array([102., 119.,  91., 101.,  87.]), 6.16),\n",
+       " (array([107., 106.,  97.,  99.,  91.]), 1.76),\n",
+       " (array([102., 111.,  99., 102.,  86.]), 3.2600000000000002),\n",
+       " (array([106., 107.,  97.,  99.,  91.]), 1.76),\n",
+       " (array([109., 102.,  91., 115.,  83.]), 6.8),\n",
+       " (array([109.,  97., 102., 107.,  85.]), 3.68),\n",
+       " (array([107., 102.,  97., 118.,  76.]), 9.620000000000001),\n",
+       " (array([106., 106.,  94.,  97.,  97.]), 1.26),\n",
+       " (array([103., 111., 105., 100.,  81.]), 5.16),\n",
+       " (array([105., 108.,  95., 103.,  89.]), 2.44),\n",
+       " (array([108., 106., 106.,  95.,  85.]), 3.86),\n",
+       " (array([109., 108.,  84., 113.,  86.]), 7.66),\n",
+       " (array([103., 113.,  98.,  98.,  88.]), 3.3000000000000003),\n",
+       " (array([102., 108.,  99., 104.,  87.]), 2.54),\n",
+       " (array([105., 109.,  94., 104.,  88.]), 3.02),\n",
+       " (array([106., 100., 100., 113.,  81.]), 5.66),\n",
+       " (array([104., 115.,  89., 104.,  88.]), 5.22),\n",
+       " (array([104., 114.,  95., 100.,  87.]), 4.0600000000000005),\n",
+       " (array([110., 102., 103., 103.,  82.]), 4.46),\n",
+       " (array([108., 104.,  93., 103.,  92.]), 2.02),\n",
+       " (array([105., 110.,  93., 104.,  88.]), 3.34),\n",
+       " (array([106., 112.,  92., 102.,  88.]), 3.92),\n",
+       " (array([104., 112.,  93., 108.,  83.]), 5.62),\n",
+       " (array([107., 100., 103., 104.,  86.]), 2.7),\n",
+       " (array([105.,  99., 103., 101.,  92.]), 1.0),\n",
+       " (array([102., 113.,  97., 100.,  88.]), 3.2600000000000002),\n",
+       " (array([110., 101.,  97., 101.,  91.]), 1.92),\n",
+       " (array([105., 105.,  97., 107.,  86.]), 3.04),\n",
+       " (array([106., 111.,  90., 108.,  85.]), 5.46),\n",
+       " (array([106., 109.,  99., 103.,  83.]), 4.16),\n",
+       " (array([104., 114.,  96.,  97.,  89.]), 3.58),\n",
+       " (array([103., 111.,  94.,  98.,  94.]), 2.06),\n",
+       " (array([107., 106., 101., 107.,  79.]), 5.76),\n",
+       " (array([103., 115.,  89., 106.,  87.]), 5.6000000000000005),\n",
+       " (array([109., 104.,  98., 104.,  85.]), 3.42),\n",
+       " (array([103., 116.,  90., 107.,  84.]), 6.7),\n",
+       " (array([104., 107., 100., 105.,  84.]), 3.46),\n",
+       " (array([110.,  99., 102., 106.,  83.]), 4.3),\n",
+       " (array([106., 110.,  93.,  96.,  95.]), 2.2600000000000002),\n",
+       " (array([111.,  99., 102.,  92.,  96.]), 2.06),\n",
+       " (array([105., 102., 106., 100.,  87.]), 2.34),\n",
+       " (array([103., 111.,  92., 111.,  83.]), 6.04),\n",
+       " (array([112.,  98.,  96., 103.,  91.]), 2.54),\n",
+       " (array([102., 107., 101., 110.,  80.]), 5.54)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sort\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ccc2b4f",
    "metadata": {},
    "outputs": [],
    "source": []
