--- a/Covariate Shift.ipynb
+++ b/Covariate Shift.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 526,
    "id": "350cf0d2-13aa-4f9c-b4b9-389460865eaf",
    "metadata": {},
    "outputs": [],
@@ -56,8 +56,8 @@
     "    return density_ratios\n",
     "\n",
     "\n",
-    "def Covariate_Shift_Weight(x, z, v = 0):\n",
-    "    return np.exp(((x - z @ s)**2 - (x - z @ t)**2)/2)\n",
+    "# def Covariate_Shift_Weight(x, z, v = 0):\n",
+    "#     return np.exp(((x - z @ s)**2 - (x - z @ t)**2)/2)\n",
     "\n",
     "def Model_X(z, v):\n",
     "    return z @ u + np.random.normal(0, 1, 1)\n",
@@ -69,11 +69,12 @@
     "\n",
     "def Conterfeits(y, x, z, v = 0, L = 5, K = 10):\n",
     "    M = L * K - 1\n",
-    "    cnt = 0 \n",
+    "    cnt = 0\n",
+    "    t_stat = T_statistic(y, x, z, v)\n",
     "    \n",
     "    for i in range(M):\n",
     "        x_ = Model_X(z, v)\n",
-    "        if T_statistic(y, x, z, v) > T_statistic(y, x_, z, v):\n",
+    "        if t_stat > T_statistic(y, x_, z, v):\n",
     "            cnt=cnt+1\n",
     "            \n",
     "    return cnt // K\n",
@@ -81,14 +82,14 @@
     "def PCRtest(Y, X, Z, V = 0, L = 5, K = 20, covariate_shift = True):\n",
     "    n = Y.size\n",
     "    W = np.array([0.0]*L)\n",
-    "    \n",
+    "\n",
     "    for j in range(n):\n",
-    "        y, x, z, v = Y[j], X[j], Z[j], 0\n",
+    "        y, x, z, v = Y[j], X[j], Z[j], V[j]\n",
     "        if covariate_shift == True:\n",
-    "            W[Conterfeits(y, x, z, v, L, K)] += sample_density_ratio[j]\n",
+    "            ind = Conterfeits(y, x, z, v, L, K)\n",
+    "            W[ind] += sample_density_ratio[j]\n",
     "        if covariate_shift == False:\n",
-    "            W[Conterfeits(y, x, z, v, L, K)] += 1\n",
-    "            \n",
+    "            W[Conterfeits(y, x, z, v, L, K)] += 1     \n",
     "    return W, L/n * np.dot(W - n/L, W - n/L)\n",
     "\n",
     "def generate_cov_matrix(Y, X, Z, V = 0, L = 5, K = 20):\n",
@@ -106,10 +107,10 @@
     "    count = np.zeros(L)\n",
     "    \n",
     "    for j in range(n):\n",
-    "        y, x, z, v = Y[j], X[j], Z[j], 0\n",
+    "        y, x, z, v = Y[j], X[j], Z[j], V[j]\n",
     "        diag[Conterfeits(y, x, z, v, L, K)] += (sample_density_ratio[j]**2)\n",
     "        count[Conterfeits(y, x, z, v, L, K)] += 1\n",
-    "    diag = diag/count\n",
+    "    diag = L*(diag/count)- 1/L\n",
     "    covariance_matrix = np.full((L, L), -1/L)  # Fill all entries with 1/L\n",
     "    np.fill_diagonal(covariance_matrix, diag)  # Set diagonal entries to 1 - 1/L^2\n",
     "    return covariance_matrix\n",
@@ -173,12 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 513,
    "id": "b71bf1c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n, p = 2000, 20\n",
+    "n, p = 1000, 20\n",
     "s = np.random.normal(0, 1, p)\n",
     "t = s + np.random.normal(0, 0.1, p)\n",
     "u = np.random.normal(0, 1, p)"
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 522,
    "id": "8a429fec",
    "metadata": {},
    "outputs": [],
@@ -203,8 +204,8 @@
     "    X_source = Z_source @ u + np.random.normal(0, 1, n)\n",
     "    X_target = Z_target @ u + np.random.normal(0, 1, n)\n",
     "    \n",
-    "    V_source = Z_source @ s + X_source + np.random.normal(0, 1, n)\n",
-    "    V_target = Z_target @ t - X_target + np.random.normal(0, 1, n)\n",
+    "    V_source = Z_source @ s - X_source + np.random.normal(0, 1, n)\n",
+    "    V_target = Z_target @ t + X_target + np.random.normal(0, 1, n)\n",
     "    \n",
     "    Y_source, Y_target = np.zeros(n), np.zeros(n)\n",
     "    for i in range(n):\n",
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 523,
    "id": "b0fdf7e8-fcae-499a-8149-c328d32c395f",
    "metadata": {},
    "outputs": [],
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 524,
    "id": "4c288a9c-deba-4953-8c5b-1a97f4a70d34",
    "metadata": {
     "collapsed": true,
@@ -317,38 +318,38 @@
       "sigma = 1.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 10.00000, lambda = 0.00100, score = 1979.45145\n",
-      "sigma = 10.00000, lambda = 0.01000, score = 191.71346\n",
-      "sigma = 10.00000, lambda = 0.10000, score = 3.46476\n",
-      "sigma = 10.00000, lambda = 1.00000, score = -0.68434\n",
-      "sigma = 10.00000, lambda = 10.00000, score = -0.53527\n",
-      "sigma = 10.00000, lambda = 100.00000, score = -0.21237\n",
-      "sigma = 10.00000, lambda = 1000.00000, score = -0.02884\n",
-      "sigma = 10.00000, lambda = 10000.00000, score = -0.00299\n",
-      "sigma = 10.00000, lambda = 100000.00000, score = -0.00030\n",
+      "sigma = 10.00000, lambda = 0.00100, score = 900.56848\n",
+      "sigma = 10.00000, lambda = 0.01000, score = 179.51370\n",
+      "sigma = 10.00000, lambda = 0.10000, score = 8.11111\n",
+      "sigma = 10.00000, lambda = 1.00000, score = -0.59786\n",
+      "sigma = 10.00000, lambda = 10.00000, score = -0.45734\n",
+      "sigma = 10.00000, lambda = 100.00000, score = -0.18954\n",
+      "sigma = 10.00000, lambda = 1000.00000, score = -0.02629\n",
+      "sigma = 10.00000, lambda = 10000.00000, score = -0.00273\n",
+      "sigma = 10.00000, lambda = 100000.00000, score = -0.00027\n",
       "sigma = 10.00000, lambda = 1000000.00000, score = -0.00003\n",
       "sigma = 10.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 100.00000, lambda = 0.00100, score = 336.85165\n",
-      "sigma = 100.00000, lambda = 0.01000, score = 4.30345\n",
-      "sigma = 100.00000, lambda = 0.10000, score = -0.50006\n",
-      "sigma = 100.00000, lambda = 1.00000, score = -0.50163\n",
-      "sigma = 100.00000, lambda = 10.00000, score = -0.49728\n",
-      "sigma = 100.00000, lambda = 100.00000, score = -0.37380\n",
-      "sigma = 100.00000, lambda = 1000.00000, score = -0.08566\n",
-      "sigma = 100.00000, lambda = 10000.00000, score = -0.00970\n",
+      "sigma = 100.00000, lambda = 0.00100, score = 84.70551\n",
+      "sigma = 100.00000, lambda = 0.01000, score = 1.52620\n",
+      "sigma = 100.00000, lambda = 0.10000, score = -0.49977\n",
+      "sigma = 100.00000, lambda = 1.00000, score = -0.49935\n",
+      "sigma = 100.00000, lambda = 10.00000, score = -0.49507\n",
+      "sigma = 100.00000, lambda = 100.00000, score = -0.37237\n",
+      "sigma = 100.00000, lambda = 1000.00000, score = -0.08542\n",
+      "sigma = 100.00000, lambda = 10000.00000, score = -0.00968\n",
       "sigma = 100.00000, lambda = 100000.00000, score = -0.00098\n",
       "sigma = 100.00000, lambda = 1000000.00000, score = -0.00010\n",
       "sigma = 100.00000, lambda = 10000000.00000, score = -0.00001\n",
       "sigma = 100.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 100.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 1000.00000, lambda = 0.00100, score = -0.49699\n",
-      "sigma = 1000.00000, lambda = 0.01000, score = -0.50002\n",
-      "sigma = 1000.00000, lambda = 0.10000, score = -0.50002\n",
-      "sigma = 1000.00000, lambda = 1.00000, score = -0.49996\n",
-      "sigma = 1000.00000, lambda = 10.00000, score = -0.49584\n",
-      "sigma = 1000.00000, lambda = 100.00000, score = -0.37493\n",
+      "sigma = 1000.00000, lambda = 0.00100, score = -0.49996\n",
+      "sigma = 1000.00000, lambda = 0.01000, score = -0.49999\n",
+      "sigma = 1000.00000, lambda = 0.10000, score = -0.49999\n",
+      "sigma = 1000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 1000.00000, lambda = 10.00000, score = -0.49582\n",
+      "sigma = 1000.00000, lambda = 100.00000, score = -0.37491\n",
       "sigma = 1000.00000, lambda = 1000.00000, score = -0.08676\n",
       "sigma = 1000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 1000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -436,8 +437,8 @@
       "sigma = 1000000000.00000, lambda = 1000000000.00000, score = -0.00000\n",
       "Found optimal sigma = 10.000, lambda = 1.000.\n",
       "Optimizing theta...\n",
-      "Approximate alpha-relative PE-divergence = 0.19\n",
-      "Approximate alpha-relative KL-divergence = 0.20\n",
+      "Approximate alpha-relative PE-divergence = 0.10\n",
+      "Approximate alpha-relative KL-divergence = 0.12\n",
       "RuLSIF completed.\n"
      ]
     },
@@ -468,146 +469,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 515,
+   "id": "8cd63a2b-11a5-40cc-b475-832ce68d5cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9874916794392931\n",
+      "0.15901963588424373\n"
+     ]
+    }
+   ],
+   "source": [
+    "# verification of the data assumption with the ordinary PCR test\n",
+    "\n",
+    "print(chi_squared_p_value(PCRtest(Y_target, X_target, Z_target,V_target, L = 10, K = 20, covariate_shift = False)[1],L-1))\n",
+    "print(chi_squared_p_value(PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = False)[1],L-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
    "id": "c8fd609a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.44411999999999996"
-      ]
-     },
-     "execution_count": 348,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.99989\n"
+     ]
     }
    ],
    "source": [
     "# verification by the p value\n",
     "\n",
-    "cov1 = generate_cov_matrix(Y_source, X_source, Z_source, L = 10, K = 20)\n",
-    "monte_carlo_p_value(100000, cov1, 10, PCRtest(Y_source, X_source, Z_source, L = 10, K = 20, covariate_shift = True)[1])"
+    "cov1 = generate_cov_matrix(Y_source, X_source, Z_source,V_source, L = 10, K = 20)\n",
+    "print(monte_carlo_p_value(100000, cov1, 10, PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)[1]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
-   "id": "3940dd8c-b179-4c46-9351-402a5e391c64",
+   "execution_count": 530,
+   "id": "52670985-f2c3-4a4c-b096-395c875a63c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([178.93359878, 198.44685075, 203.60873748, 179.20039867,\n",
-       "        194.97240007, 192.17714585, 178.82563157, 195.07180412,\n",
-       "        202.83489152, 198.61950645]),\n",
-       " 7.304545541438645)"
+       "(array([219.73163892, 192.48653133, 191.39085567, 221.24855881,\n",
+       "        216.97880949, 211.18355358, 202.38530993, 202.58680126,\n",
+       "        204.86565962, 194.37502547]),\n",
+       " 7.262282359527039)"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 530,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PCRtest(Y_source, X_source, Z_source, L = 10, K = 20, covariate_shift = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 321,
-   "id": "5dd1427e-1f29-43fd-bd5e-7784dcb04534",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cov1 = generate_cov_matrix(Y_source, X_source, Z_source, L = 10, K = 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
-   "id": "152a0879-1c82-4544-8139-f708886ef638",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.52692"
-      ]
-     },
-     "execution_count": 322,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "monte_carlo_p_value(100000, cov1, 10, 9.72)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "id": "93bf7bac",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([209., 221., 179., 199., 196., 186., 189., 211., 199., 211.]), 7.7)"
-      ]
-     },
-     "execution_count": 287,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PCRtest(Y_target, X_target, Z_target, L = 10, K = 20, covariate_shift = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 288,
-   "id": "fb57ec19-c2c3-403a-803b-aeae56e9afce",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([367., 413., 378., 402., 440.]), 8.365)"
-      ]
-     },
-     "execution_count": 288,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PCRtest(Y_source, X_source, Z_source, L = 5, K = 20, covariate_shift = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 291,
-   "id": "499f136f-bf4f-40c9-b160-4bbe41a01355",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.10320672172612921"
-      ]
-     },
-     "execution_count": 291,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chi_squared_p_value(7.7,4)"
+    "PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)"
    ]
   },
   {
@@ -686,7 +612,23 @@
    "id": "c40b676f-3439-4e4a-9dcf-e6d988bb3fc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# simulation code\n",
+    "K = 20\n",
+    "L = 10\n",
+    "n, p = 1000, 20\n",
+    "s = np.random.normal(0, 1, p)\n",
+    "t = s + np.random.normal(0, 0.1, p)\n",
+    "u = np.random.normal(0, 1, p)\n",
+    "\n",
+    "result = []\n",
+    "for l in range(4, 30):\n",
+    "    for i in range\n",
+    "    cov1 = generate_cov_matrix(Y_source, X_source, Z_source, L = l, K = 20)\n",
+    "    result.append(monte_carlo_p_value(100000, cov1, l, PCRtest(Y_source, X_source, Z_source, L = l, K = 20, covariate_shift = True)[1]))\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
