--- a/Covariate Shift.ipynb
+++ b/Covariate Shift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 1,
    "id": "f276cf02",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 28,
    "id": "350cf0d2-13aa-4f9c-b4b9-389460865eaf",
    "metadata": {},
    "outputs": [],
@@ -104,13 +104,11 @@
     "    \"\"\"\n",
     "    n = Y.size\n",
     "    diag = np.array([0.0]*L)\n",
-    "    count = np.zeros(L)\n",
     "    \n",
     "    for j in range(n):\n",
     "        y, x, z, v = Y[j], X[j], Z[j], V[j]\n",
     "        diag[Conterfeits(y, x, z, v, L, K)] += (sample_density_ratio[j]**2)\n",
-    "        count[Conterfeits(y, x, z, v, L, K)] += 1\n",
-    "    diag = L*(diag/count)- 1/L\n",
+    "    diag = L*(diag/n)- 1/L\n",
     "    covariance_matrix = np.full((L, L), -1/L)  # Fill all entries with 1/L\n",
     "    np.fill_diagonal(covariance_matrix, diag)  # Set diagonal entries to 1 - 1/L^2\n",
     "    return covariance_matrix\n",
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 3,
    "id": "93657a58-79da-400b-8064-fc5ba7d5885a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 4,
    "id": "b71bf1c8",
    "metadata": {},
    "outputs": [],
@@ -187,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 43,
    "id": "8a429fec",
    "metadata": {},
    "outputs": [],
@@ -204,8 +202,8 @@
     "    X_source = Z_source @ u + np.random.normal(0, 1, n)\n",
     "    X_target = Z_target @ u + np.random.normal(0, 1, n)\n",
     "    \n",
-    "    V_source = Z_source @ s - X_source + np.random.normal(0, 1, n)\n",
-    "    V_target = Z_target @ t + X_target + np.random.normal(0, 1, n)\n",
+    "    V_source = Z_source @ s + X_source + np.random.normal(0, 1, n)\n",
+    "    V_target = Z_target @ t - X_target + np.random.normal(0, 1, n)\n",
     "    \n",
     "    Y_source, Y_target = np.zeros(n), np.zeros(n)\n",
     "    for i in range(n):\n",
@@ -235,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 44,
    "id": "b0fdf7e8-fcae-499a-8149-c328d32c395f",
    "metadata": {},
    "outputs": [],
    "source": [
     "K = 20\n",
     "L = 10\n",
-    "n, p = 2000, 20\n",
+    "n, p = 1000, 20\n",
     "s = np.random.normal(0, 1, p)\n",
     "t = s + np.random.normal(0, 0.1, p)\n",
     "u = np.random.normal(0, 1, p)"
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 45,
    "id": "4c288a9c-deba-4953-8c5b-1a97f4a70d34",
    "metadata": {
     "collapsed": true,
@@ -267,29 +265,29 @@
       "RuLSIF starting...\n",
       "Searching for the optimal sigma and lambda...\n",
       "sigma = 0.00100, lambda = 0.00100, score = 0.00000\n",
-      "sigma = 0.00100, lambda = 0.01000, score = -0.00000\n",
+      "sigma = 0.00100, lambda = 0.01000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 0.10000, score = 0.00000\n",
-      "sigma = 0.00100, lambda = 1.00000, score = 0.00000\n",
+      "sigma = 0.00100, lambda = 1.00000, score = -0.00000\n",
       "sigma = 0.00100, lambda = 10.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 100.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 1000.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 10000.00000, score = -0.00000\n",
       "sigma = 0.00100, lambda = 100000.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 1000000.00000, score = 0.00000\n",
-      "sigma = 0.00100, lambda = 10000000.00000, score = -0.00000\n",
+      "sigma = 0.00100, lambda = 10000000.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 100000000.00000, score = 0.00000\n",
       "sigma = 0.00100, lambda = 1000000000.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 0.00100, score = 0.00000\n",
-      "sigma = 0.01000, lambda = 0.01000, score = -0.00000\n",
+      "sigma = 0.01000, lambda = 0.01000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 0.10000, score = 0.00000\n",
-      "sigma = 0.01000, lambda = 1.00000, score = 0.00000\n",
+      "sigma = 0.01000, lambda = 1.00000, score = -0.00000\n",
       "sigma = 0.01000, lambda = 10.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 100.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 1000.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 10000.00000, score = -0.00000\n",
       "sigma = 0.01000, lambda = 100000.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 1000000.00000, score = 0.00000\n",
-      "sigma = 0.01000, lambda = 10000000.00000, score = -0.00000\n",
+      "sigma = 0.01000, lambda = 10000000.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 100000000.00000, score = 0.00000\n",
       "sigma = 0.01000, lambda = 1000000000.00000, score = 0.00000\n",
       "sigma = 0.10000, lambda = 0.00100, score = -0.00000\n",
@@ -305,8 +303,8 @@
       "sigma = 0.10000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 0.10000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 0.10000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 1.00000, lambda = 0.00100, score = -0.00010\n",
-      "sigma = 1.00000, lambda = 0.01000, score = -0.00001\n",
+      "sigma = 1.00000, lambda = 0.00100, score = -0.00021\n",
+      "sigma = 1.00000, lambda = 0.01000, score = -0.00002\n",
       "sigma = 1.00000, lambda = 0.10000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 1.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 10.00000, score = -0.00000\n",
@@ -318,39 +316,39 @@
       "sigma = 1.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 1.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 10.00000, lambda = 0.00100, score = 900.56848\n",
-      "sigma = 10.00000, lambda = 0.01000, score = 179.51370\n",
-      "sigma = 10.00000, lambda = 0.10000, score = 8.11111\n",
-      "sigma = 10.00000, lambda = 1.00000, score = -0.59786\n",
-      "sigma = 10.00000, lambda = 10.00000, score = -0.45734\n",
-      "sigma = 10.00000, lambda = 100.00000, score = -0.18954\n",
-      "sigma = 10.00000, lambda = 1000.00000, score = -0.02629\n",
-      "sigma = 10.00000, lambda = 10000.00000, score = -0.00273\n",
-      "sigma = 10.00000, lambda = 100000.00000, score = -0.00027\n",
-      "sigma = 10.00000, lambda = 1000000.00000, score = -0.00003\n",
+      "sigma = 10.00000, lambda = 0.00100, score = 3192.57192\n",
+      "sigma = 10.00000, lambda = 0.01000, score = 224.48716\n",
+      "sigma = 10.00000, lambda = 0.10000, score = 9.98097\n",
+      "sigma = 10.00000, lambda = 1.00000, score = -0.67264\n",
+      "sigma = 10.00000, lambda = 10.00000, score = -0.43013\n",
+      "sigma = 10.00000, lambda = 100.00000, score = -0.16197\n",
+      "sigma = 10.00000, lambda = 1000.00000, score = -0.02168\n",
+      "sigma = 10.00000, lambda = 10000.00000, score = -0.00224\n",
+      "sigma = 10.00000, lambda = 100000.00000, score = -0.00022\n",
+      "sigma = 10.00000, lambda = 1000000.00000, score = -0.00002\n",
       "sigma = 10.00000, lambda = 10000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 10.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 100.00000, lambda = 0.00100, score = 84.70551\n",
-      "sigma = 100.00000, lambda = 0.01000, score = 1.52620\n",
-      "sigma = 100.00000, lambda = 0.10000, score = -0.49977\n",
-      "sigma = 100.00000, lambda = 1.00000, score = -0.49935\n",
-      "sigma = 100.00000, lambda = 10.00000, score = -0.49507\n",
-      "sigma = 100.00000, lambda = 100.00000, score = -0.37237\n",
-      "sigma = 100.00000, lambda = 1000.00000, score = -0.08542\n",
-      "sigma = 100.00000, lambda = 10000.00000, score = -0.00968\n",
-      "sigma = 100.00000, lambda = 100000.00000, score = -0.00098\n",
+      "sigma = 100.00000, lambda = 0.00100, score = 217.50064\n",
+      "sigma = 100.00000, lambda = 0.01000, score = 7.74568\n",
+      "sigma = 100.00000, lambda = 0.10000, score = -0.48522\n",
+      "sigma = 100.00000, lambda = 1.00000, score = -0.49858\n",
+      "sigma = 100.00000, lambda = 10.00000, score = -0.49412\n",
+      "sigma = 100.00000, lambda = 100.00000, score = -0.37105\n",
+      "sigma = 100.00000, lambda = 1000.00000, score = -0.08491\n",
+      "sigma = 100.00000, lambda = 10000.00000, score = -0.00962\n",
+      "sigma = 100.00000, lambda = 100000.00000, score = -0.00097\n",
       "sigma = 100.00000, lambda = 1000000.00000, score = -0.00010\n",
       "sigma = 100.00000, lambda = 10000000.00000, score = -0.00001\n",
       "sigma = 100.00000, lambda = 100000000.00000, score = -0.00000\n",
       "sigma = 100.00000, lambda = 1000000000.00000, score = -0.00000\n",
-      "sigma = 1000.00000, lambda = 0.00100, score = -0.49996\n",
+      "sigma = 1000.00000, lambda = 0.00100, score = -0.47907\n",
       "sigma = 1000.00000, lambda = 0.01000, score = -0.49999\n",
-      "sigma = 1000.00000, lambda = 0.10000, score = -0.49999\n",
-      "sigma = 1000.00000, lambda = 1.00000, score = -0.49994\n",
-      "sigma = 1000.00000, lambda = 10.00000, score = -0.49582\n",
-      "sigma = 1000.00000, lambda = 100.00000, score = -0.37491\n",
-      "sigma = 1000.00000, lambda = 1000.00000, score = -0.08676\n",
+      "sigma = 1000.00000, lambda = 0.10000, score = -0.49998\n",
+      "sigma = 1000.00000, lambda = 1.00000, score = -0.49992\n",
+      "sigma = 1000.00000, lambda = 10.00000, score = -0.49578\n",
+      "sigma = 1000.00000, lambda = 100.00000, score = -0.37484\n",
+      "sigma = 1000.00000, lambda = 1000.00000, score = -0.08675\n",
       "sigma = 1000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 1000.00000, lambda = 100000.00000, score = -0.00100\n",
       "sigma = 1000.00000, lambda = 1000000.00000, score = -0.00010\n",
@@ -360,9 +358,9 @@
       "sigma = 10000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 10000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 10000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 10000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 10000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 10000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 10000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 10000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 10000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 10000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 10000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 10000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -373,9 +371,9 @@
       "sigma = 100000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 100000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 100000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 100000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 100000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 100000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 100000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 100000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 100000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 100000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 100000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 100000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -386,9 +384,9 @@
       "sigma = 1000000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 1000000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 1000000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 1000000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 1000000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 1000000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 1000000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 1000000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 1000000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 1000000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 1000000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 1000000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -399,9 +397,9 @@
       "sigma = 10000000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 10000000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 10000000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 10000000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 10000000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 10000000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 10000000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 10000000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 10000000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 10000000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 10000000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 10000000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -412,9 +410,9 @@
       "sigma = 100000000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 100000000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 100000000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 100000000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 100000000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 100000000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 100000000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 100000000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 100000000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 100000000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 100000000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 100000000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -425,9 +423,9 @@
       "sigma = 1000000000.00000, lambda = 0.00100, score = -0.50000\n",
       "sigma = 1000000000.00000, lambda = 0.01000, score = -0.50000\n",
       "sigma = 1000000000.00000, lambda = 0.10000, score = -0.50000\n",
-      "sigma = 1000000000.00000, lambda = 1.00000, score = -0.49995\n",
-      "sigma = 1000000000.00000, lambda = 10.00000, score = -0.49583\n",
-      "sigma = 1000000000.00000, lambda = 100.00000, score = -0.37494\n",
+      "sigma = 1000000000.00000, lambda = 1.00000, score = -0.49994\n",
+      "sigma = 1000000000.00000, lambda = 10.00000, score = -0.49579\n",
+      "sigma = 1000000000.00000, lambda = 100.00000, score = -0.37487\n",
       "sigma = 1000000000.00000, lambda = 1000.00000, score = -0.08677\n",
       "sigma = 1000000000.00000, lambda = 10000.00000, score = -0.00985\n",
       "sigma = 1000000000.00000, lambda = 100000.00000, score = -0.00100\n",
@@ -437,8 +435,8 @@
       "sigma = 1000000000.00000, lambda = 1000000000.00000, score = -0.00000\n",
       "Found optimal sigma = 10.000, lambda = 1.000.\n",
       "Optimizing theta...\n",
-      "Approximate alpha-relative PE-divergence = 0.10\n",
-      "Approximate alpha-relative KL-divergence = 0.12\n",
+      "Approximate alpha-relative PE-divergence = 0.18\n",
+      "Approximate alpha-relative KL-divergence = 0.21\n",
       "RuLSIF completed.\n"
      ]
     },
@@ -469,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 11,
    "id": "8cd63a2b-11a5-40cc-b475-832ce68d5cf8",
    "metadata": {},
    "outputs": [
@@ -477,21 +475,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9874916794392931\n",
-      "0.15901963588424373\n"
+      "0.016430710130682424\n",
+      "0.518106081181934\n"
      ]
     }
    ],
    "source": [
     "# verification of the data assumption with the ordinary PCR test\n",
     "\n",
-    "print(chi_squared_p_value(PCRtest(Y_target, X_target, Z_target,V_target, L = 10, K = 20, covariate_shift = False)[1],L-1))\n",
-    "print(chi_squared_p_value(PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = False)[1],L-1))"
+    "print(chi_squared_p_value(PCRtest(Y_target, X_target, Z_target,V_target, L = 10, K = 30, covariate_shift = False)[1],L-1))\n",
+    "print(chi_squared_p_value(PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 30, covariate_shift = False)[1],L-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 46,
    "id": "c8fd609a",
    "metadata": {
     "tags": []
@@ -501,39 +499,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.99989\n"
+      "0.61383\n",
+      "0.32126999999999994\n",
+      "0.78939\n",
+      "0.76336\n",
+      "0.27823\n",
+      "0.5292399999999999\n",
+      "0.17881000000000002\n",
+      "0.06591999999999998\n",
+      "0.5493600000000001\n",
+      "0.49693\n"
      ]
     }
    ],
    "source": [
     "# verification by the p value\n",
-    "\n",
-    "cov1 = generate_cov_matrix(Y_source, X_source, Z_source,V_source, L = 10, K = 20)\n",
-    "print(monte_carlo_p_value(100000, cov1, 10, PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)[1]))\n"
+    "for j in range(10):\n",
+    "    cov1 = generate_cov_matrix(Y_source, X_source, Z_source,V_source, L = 10, K = 20)\n",
+    "    print(monte_carlo_p_value(100000, cov1, 10, PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)[1]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 531,
    "id": "52670985-f2c3-4a4c-b096-395c875a63c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([219.73163892, 192.48653133, 191.39085567, 221.24855881,\n",
-       "        216.97880949, 211.18355358, 202.38530993, 202.58680126,\n",
-       "        204.86565962, 194.37502547]),\n",
-       " 7.262282359527039)"
+       "(array([210.42659433, 194.17036367, 205.77078838, 199.36556849,\n",
+       "        226.40790323, 202.13616933, 211.62012152, 213.57050006,\n",
+       "        199.14345193, 194.62128313]),\n",
+       " 6.135967845352278)"
       ]
      },
-     "execution_count": 530,
+     "execution_count": 531,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PCRtest(Y_source, X_source, Z_source,V_source, L = 10, K = 20, covariate_shift = True)"
+    "PCRtest(Y_source, X_source, Z_source, V_source, L = 10, K = 20, covariate_shift = True)"
    ]
   },
   {
